--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^6.14.4",
     "nunjucks": "^3.2.1",
     "restify": "^8.5.1",
+    "toastr": "^2.1.4",
     "useful-nunjucks-filters": "^0.1.3"
   },
   "devDependencies": {}
